--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Typescript</title>
-  </head>
-  <body>
-    <p>Typescript</p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Typescript</title>
+    </head>
+    <body>
+        <p>Typescript</p>
+        <div id="app"></div>
 
-    <script src="dist/app.js" defer></script>
-  </body>
+        <button>Click me!</button>
+
+        <form>
+            <input type="text" name="" id="title" />
+            <input type="text" name="" id="price" />
+            <input type="submit" value="Save" />
+        </form>
+        <script src="dist/app.js" defer></script>
+    </body>
 </html>
